--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
   - 7.1.9
 services:
   - docker
-#before_install:
-# - 
+before_install:
+ - composer update 
 #script:
 #  - docker run -v ${pwd}:/app --rm phpunit/phpunit run
