--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
   - docker
 before_install:
  - composer update 
-#script:
-#  - docker run -v ${pwd}:/app --rm phpunit/phpunit run
+script:
+  - docker run -v ${pwd}:/app --rm phpunit/phpunit run
